--- a/source/css/Fan_CSS.css
+++ b/source/css/Fan_CSS.css
@@ -6,3 +6,43 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+#buscarlocales{
+   width: 48%;
+    padding: 10px;
+    float: left;
+    text-align:  center;
+    display: inline-block;
+    background-color: #c9b18d;
+    margin: 10px;
+    height: 690px;  
+ }
+  #enviarsolicitudes{
+     height: 100%;
+     width: 100%;
+     background-color:  antiquewhite; 
+     display:  inline-block;
+     float: left;
+ }
+ #titulo{
+     height: 80px;
+     width: 100%;
+     color:  black;
+     background-color:  antiquewhite; 
+     font-family: Tw Cen MT;
+    font-size: 30px; 
+    padding-top: 35px;
+ }
+ #proximosconciertos{
+      background-color: #c9b18d;
+    display: inline-block;
+    float: right;
+    height: 295px;
+    margin: 0 20px;
+    padding-left: 0;
+    width: 46%;
+}
+#musicos{
+   background-color: antiquewhite;
+   width: 100%;
+   height: 100%;
+}
