--- a/source/css/estilos.css
+++ b/source/css/estilos.css
@@ -52,6 +52,7 @@ footer > div /*A CAMBIAR Y COMPLETAR*/
 {
     position: relative;
     width: 100%;
+    margin-left: 0px;
     background: -moz-linear-gradient(top, #4c4c4c 0%, #561313 2%, #441717 5%, #7a2f2f 9%, #8c4f4f 12%, #4c2727 82%, #6b4646 87%, #1c1c1c 95%, #131313 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, #4c4c4c 0%,#561313 2%,#441717 5%,#7a2f2f 9%,#8c4f4f 12%,#4c2727 82%,#6b4646 87%,#1c1c1c 95%,#131313 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom, #4c4c4c 0%,#561313 2%,#441717 5%,#7a2f2f 9%,#8c4f4f 12%,#4c2727 82%,#6b4646 87%,#1c1c1c 95%,#131313 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -64,6 +65,7 @@ footer > div /*A CAMBIAR Y COMPLETAR*/
     color: red;
     height: 100px;
     width: 100%;
+    margin-left: 0px;
     z-index: 1;
     background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 2%, #474747 5%, #2c2c2c 9%, #000000 12%, #111111 82%, #2b2b2b 87%, #1c1c1c 95%, #131313 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, #4c4c4c 0%,#595959 2%,#474747 5%,#2c2c2c 9%,#000000 12%,#111111 82%,#2b2b2b 87%,#1c1c1c 95%,#131313 100%); /* Chrome10-25,Safari5.1-6 */
@@ -75,7 +77,7 @@ footer > div /*A CAMBIAR Y COMPLETAR*/
 {
     display: inline-block;
     width: 75%;
-    margin: 20px;
+    margin: 8px;
 }
 
 .menuitem-homepage /*CADA UNO DE LOS ÍTEMS DEL MENÚ*/
