--- a/source/css/Fan_CSS.css
+++ b/source/css/Fan_CSS.css
@@ -6,23 +6,20 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-#buscarlocales{
+#divranking{
    width: 48%;
     padding: 10px;
-    float: left;
+   float: left;
     text-align:  center;
     display: inline-block;
-    background-color: #c9b18d;
-    margin: 10px;
-    height: 690px;  
+   
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 670px;  
+    background-color:  antiquewhite;
  }
-  #enviarsolicitudes{
-     height: 100%;
-     width: 100%;
-     background-color:  antiquewhite; 
-     display:  inline-block;
-     float: left;
- }
+  
  #titulo{
      height: 80px;
      width: 100%;
@@ -30,7 +27,7 @@
      background-color:  antiquewhite; 
      font-family: Tw Cen MT;
     font-size: 30px; 
-    padding-top: 35px;
+    padding-top: 15px;
  }
  #proximosconciertos{
       background-color: #c9b18d;
@@ -45,4 +42,16 @@
    background-color: antiquewhite;
    width: 100%;
    height: 100%;
+}
+#divtablaranking{
+    text-align:center;
+   padding: 10px 10px 10px 10px;
+    width: 100%;
+    height: 550px;
+}
+#tablaranking{
+    text-align: center;
+    height: 95%;
+    width: 95%;
+    
 }
