Página de fan bastante avanzada, funciones select a punto

--- a/src/front_end/css/index.css
+++ b/src/front_end/css/index.css
@@ -13,6 +13,9 @@ h1 {
     font-family: oldtown;
     color: black;
 }
+.justified {
+  text-align: justify;
+}
 .carousel-inner img {
   -webkit-filter: grayscale(90%);
   filter: grayscale(90%); /* make all photos black and white */ 
