--- a/src/front_end/css/index.css
+++ b/src/front_end/css/index.css
@@ -13,6 +13,12 @@ h1 {
     font-family: oldtown;
     color: black;
 }
+#cerrarsesion
+{
+  margin: 13px;
+  margin-bottom: 0;
+  height: 70%;
+}
 .justified {
   text-align: justify;
 }
