--- a/src/front_end/css/index.css
+++ b/src/front_end/css/index.css
@@ -13,6 +13,10 @@ h1 {
     font-family: oldtown;
     color: black;
 }
+#logo{
+  width: 100px;
+  height: 100px;
+}
 #cerrarsesion
 {
   margin: 13px;
