--- a/src/front_end/css/index.css
+++ b/src/front_end/css/index.css
@@ -13,6 +13,10 @@ h1 {
     font-family: oldtown;
     color: black;
 }
+hr
+{
+  border-color: #000000;
+}
 #logo{
   width: 50px;
   height: 50px;
